<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Base.AlertDialog.AppCompat.Light"
    tools:context="com.example.snehatummarguddi.cleanbanglore.detailActivity">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/CleanBangalore"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/registerhere"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView9"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/firstname"

        />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView10"
        android:layout_toRightOf="@id/textView10"
        android:text="@string/name" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView10"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/middlename" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView11"
        android:layout_toRightOf="@id/textView11"
        android:text="@string/name3" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"


        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/Email"
        android:textSize="15dp"/>


    <EditText
        android:id="@+id/editText7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name2"
        android:layout_alignBaseline="@+id/textView12"
        android:layout_toRightOf="@id/textView11"
        />


    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:padding="26dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        />

    <ImageView
        android:id="@+id/button1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/self"

        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView9"
        android:layout_alignRight="@+id/textView9"
        android:layout_below="@+id/editText7"
        android:layout_marginTop="65dp"
        android:text="@string/change"
        android:onClick="OnClickHandler"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:text="@string/assets"
        android:onClick="OnClick2"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="buttononclickhandler3"/>


</RelativeLayout>
